--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
   <body class="bg-black">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="/src/index.tsx"></script>
   
 </body>
 </html>
