--- a/index.html
+++ b/index.html
@@ -19,15 +19,17 @@
     "react": "https://aistudiocdn.com/react@^19.1.1",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.2",
-    "vite": "https://aistudiocdn.com/vite@^7.1.4"
+    "vite": "https://aistudiocdn.com/vite@^7.1.4",
+    "@netlify/functions": "https://aistudiocdn.com/@netlify/functions@^4.2.5",
+    "stripe": "https://aistudiocdn.com/stripe@^18.5.0",
+    "@aws-sdk/client-s3": "https://aistudiocdn.com/@aws-sdk/client-s3@^3.884.0",
+    "@aws-sdk/s3-request-presigner": "https://aistudiocdn.com/@aws-sdk/s3-request-presigner@^3.884.0"
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
 </head>
   <body class="bg-black">
     <div id="root"></div>
-    <script type="module" src="/src/index.tsx"></script>
-  
-</body>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
