--- a/index.html
+++ b/index.html
@@ -11,6 +11,25 @@
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
       }
+      
+      /* --- Custom Font Definition --- */
+      /* Place your Nakara font files in the `public/fonts` directory */
+      @font-face {
+        font-family: 'Nakara';
+        /* The browser will try to load the best format first. */
+        src: url('/fonts/Nakara.woff2') format('woff2'),
+             url('/fonts/Nakara.woff') format('woff'),
+             url('/fonts/Nakara.ttf') format('truetype');
+        font-weight: normal;
+        font-style: normal;
+        font-display: swap; /* Ensures text is visible while font loads */
+      }
+
+      .font-nakara {
+        font-family: 'Nakara', sans-serif;
+      }
+      /* --- End Custom Font Definition --- */
+
       @keyframes spin {
         from {
           transform: rotate(0deg);
