--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
       }
       
       /* --- Custom Font Definition --- */
-      /* Place your Nakara font files in the `public/fonts` directory */
+      /* NOTE: Ensure your font files in `public/fonts` are renamed to use hyphens (e.g., Nakara-Regular.woff2) */
       
       /* Defines the 'Nakara Regular' font */
       @font-face {
         font-family: 'Nakara';
-        src: url('/fonts/Nakara Regular.woff2') format('woff2'),
-             url('/fonts/Nakara Regular.woff') format('woff'),
-             url('/fonts/Nakara Regular.ttf') format('truetype');
+        src: url('/fonts/Nakara-Regular.woff2') format('woff2'),
+             url('/fonts/Nakara-Regular.woff') format('woff'),
+             url('/fonts/Nakara-Regular.ttf') format('truetype');
         font-weight: normal;
         font-style: normal;
         font-display: swap;
@@ -29,9 +29,9 @@
       /* Defines the 'Nakara Outline' font */
       @font-face {
         font-family: 'Nakara Outline';
-        src: url('/fonts/Nakara Outline.woff2') format('woff2'),
-             url('/fonts/Nakara Outline.woff') format('woff'),
-             url('/fonts/Nakara Outline.ttf') format('truetype');
+        src: url('/fonts/Nakara-Outline.woff2') format('woff2'),
+             url('/fonts/Nakara-Outline.woff') format('woff'),
+             url('/fonts/Nakara-Outline.ttf') format('truetype');
         font-weight: normal;
         font-style: normal;
         font-display: swap;
@@ -58,7 +58,7 @@
         0% {
           transform: scale(1.05) translate(0, 0);
           opacity: 0.85;
-        }
+''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''        }
         50% {
           transform: scale(1.15) translate(-1%, 1%);
           opacity: 1;
