--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
       /* Utility class to apply the font. Using 'Nakara Outline' for headings. */
       .font-nakara {
-        font-family: 'Nakara-Outline', 'Nakara', sans-serif; /* Fallback to Regular, then sans-serif */
+        font-family: 'Nakara-Outline', 'Nakara-Regular', sans-serif; /* Fallback to Regular, then sans-serif */
       }
       /* --- End Custom Font Definition --- */
 
