--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       
       /* Defines the 'Nakara Regular' font */
       @font-face {
-        font-family: 'Nakara';
+        font-family: 'Nakara Regular';
         src: url('/fonts/Nakara-Regular.woff2') format('woff2'),
              url('/fonts/Nakara-Regular.woff') format('woff'),
              url('/fonts/Nakara-Regular.ttf') format('truetype');
@@ -28,7 +28,7 @@
       
       /* Defines the 'Nakara Outline' font */
       @font-face {
-        font-family: 'Nakara';
+        font-family: 'Nakara Outline';
         src: url('/fonts/Nakara-Outline.woff2') format('woff2'),
              url('/fonts/Nakara-Outline.woff') format('woff'),
              url('/fonts/Nakara-Outline.ttf') format('truetype');
@@ -39,7 +39,7 @@
 
       /* Utility class to apply the font. Using 'Nakara Outline' for headings. */
       .font-nakara {
-        font-family: 'Nakara','Nakara-Outline', 'Nakara-Regular', 'sans-serif'; /* Fallback to Regular, then sans-serif */
+        font-family: 'Nakara Outline', 'Nakara Regular', sans-serif; /* Correct fallback chain */
       }
       /* --- End Custom Font Definition --- */
 
