--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       
       /* Defines the 'Nakara Regular' font */
       @font-face {
-        font-family: 'Nakara Regular';
+        font-family: 'Nakara-Regular';
         src: url('/fonts/Nakara-Regular.woff2') format('woff2'),
              url('/fonts/Nakara-Regular.woff') format('woff'),
              url('/fonts/Nakara-Regular.ttf') format('truetype');
@@ -26,9 +26,9 @@
         font-display: swap;
       }
       
-      /* Defines the 'Nakara Outline' font */
+      /* Defines the 'Nakara' font */
       @font-face {
-        font-family: 'Nakara Outline';
+        font-family: 'Nakara-Outline';
         src: url('/fonts/Nakara-Outline.woff2') format('woff2'),
              url('/fonts/Nakara-Outline.woff') format('woff'),
              url('/fonts/Nakara-Outline.ttf') format('truetype');
@@ -36,10 +36,21 @@
         font-style: normal;
         font-display: swap;
       }
+       /* Defines the 'Nakara' font */
+      @font-face {
+        font-family: 'Nakara-Rough';
+        src: url('/fonts/Nakara-Rough.woff2') format('woff2'),
+             url('/fonts/Nakara-Rough.woff') format('woff'),
+             url('/fonts/Nakara-Rough.ttf') format('truetype');
+        font-weight: normal;
+        font-style: normal;
+        font-display: swap;
+      }
+
 
       /* Utility class to apply the font. Using 'Nakara Outline' for headings. */
       .font-nakara {
-        font-family: 'Nakara Outline', 'Nakara Regular', sans-serif; /* Correct fallback chain */
+        font-family: 'Nakara-Outline', 'Nakara-Regular', 'Nakara-Rough'; /* Correct fallback chain */
       }
       /* --- End Custom Font Definition --- */
 
