--- a/index.html
+++ b/index.html
@@ -42,22 +42,16 @@
       .animate-spin-slow {
         animation: spin 10s linear infinite;
       }
-      @keyframes kenburns {
-        0% {
-          transform: scale(1.05) translate(0, 0);
-          opacity: 0.85;
+      @keyframes fadeIn {
+        from {
+          opacity: 0;
         }
-        50% {
-          transform: scale(1.15) translate(-1%, 1%);
+        to {
           opacity: 1;
         }
-        100% {
-          transform: scale(1.05) translate(0, 0);
-          opacity: 0.85;
-        }
       }
-      .animate-kenburns {
-        animation: kenburns 45s ease-in-out infinite;
+      .animate-fade-in {
+        animation: fadeIn 2s ease-in-out forwards;
       }
     </style>
   <script type="importmap">
